--- a/index.html
+++ b/index.html
@@ -17,20 +17,24 @@
         <!-- app is basically the DOM of this HTML -->
         const app = document.getElementById('app');
         
-        <!-- React component starts with Capital letter vs. JS function. Otherwise both a function and component are more or less the same thing. -->
-        function Header(){
-          return (<h1>Develop. Preview. Ship.</h1>)
+
+        function Header({ title }){
+          return(<h1>{title ? title : 'Default title'}</h1>)
         }
 
         function Homepage(){
+          const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
           return (    
             <div>
-            {/* Nesting the Header component */}
-            <Header />
+              <Header title="Develop. Preview. Ship." />
+              <ul>
+                {names.map((name)=>(
+                  <li key={name}>{name}</li>
+                ))}
+              </ul>
             </div>
           )
         }
-        
         <!-- root is, in my understanding, a "wrapper" of React on the DOM/app -->
         const root = ReactDOM.createRoot(app);
         root.render(<Homepage />);
