--- a/index_7b.html
+++ b/index_7b.html
@@ -40,7 +40,8 @@
           {/* EXTRA - You can pass the state information to children components as props */}
           const [likes, setLikes] = React.useState(0);
 
-          {/* "Handler" function for any Events always needs to go before the *final* return function. */}
+          
+          {/* running the setLikes (state function) function to increment visual like counter*/}    
           function handleClick() {
             setLikes(likes + 1);
             console.log("increment like count")
@@ -56,7 +57,8 @@
                 ))}
               </ul>
               
-              {/* onClick is an event. That needs to be "handled" */}
+              {/* likes variable (state value) is displayed here using curyl braces. */}
+              {/* As we need to diplay it in a JSX element */}
               <button onClick={handleClick}>Like {likes} </button>
             </div>
           )
